--- a/project.css
+++ b/project.css
@@ -33,6 +33,7 @@ html,body{
     background-color: transparent;
     text-align: right;
     font-size: 40px;
+    color:#ffffff;
     margin-right: 20px;
 }
 .key{
