--- a/project.css
+++ b/project.css
@@ -61,3 +61,34 @@ html,body{
     color: lightgreen;
     font-weight: 600;
 }
+@media  (max-width:600px),(min-width1200px){
+    #calculator{
+        width: 100%;
+        height: 100%;
+    }
+    #input{
+        font-size: 40px;
+        height: 30%;
+        width: 90%;
+        margin-bottom: 30px;
+        border-bottom: 2px solid white;
+        margin-left: 20px;
+    }
+    .key{
+        height: 83px;
+        width: 83px;
+        font-size: 25px;
+        opacity: 2;
+    }
+  .main-key{
+    margin-left: 0px;
+    margin-right: 0px;
+
+  }
+  #main{
+    height: 100vw;
+    width: 100vw;
+    display: initial;
+    user-select: none;
+}
+}
