--- a/project.css
+++ b/project.css
@@ -61,7 +61,7 @@ html,body{
     color: lightgreen;
     font-weight: 600;
 }
-@media  (max-width:600px),(min-width1200px){
+@media  (max-width:600px){
     #calculator{
         width: 100%;
         height: 100%;
@@ -75,8 +75,8 @@ html,body{
         margin-left: 20px;
     }
     .key{
-        height: 83px;
-        width: 83px;
+        height: 63px;
+        width: 63px;
         font-size: 25px;
         opacity: 2;
     }
